2012-12-17  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Added feature to delete
	inventory data older than X days (taken from
	deletion for regular data).

2012-12-17  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DataServer.pm: Unset a missed data of the
	parameters hash when create module on dataserver

2012-12-13  Sergio Martin <sergio.martin@artica.es>

	* conf/pandora_server.conf
	lib/PandoraFMS/Config.pm
	lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	bin/pandora_server: Added new thread to the
	event replication process (enterprise feature) 
	and control this one and the policy queue patrol 
	process with new two configuration parameters

2012-12-10  Sancho Lerena <slerena@artica.es>
	
	* Core.pm: Applied patch 3576115 from Axel: implemented maintance
	priority from events coming from recovery alerts.
	
	* Tool.pm: Decode output in all logfile output.
	
	* Config.pm: Updated version.

2012-12-09  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/tentacle_server: Changed how to get pid of tentacle_server
	strictly. Updated year.

2012-11-30  Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Added missing safe_output()
	for trap filters. This fixed a bug that a backslash could not
	escape its following character.

	Merged from 4.0 branch.

2012-11-28  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/Tools.pm: Temporal fix to OID translation.

2012-11-28  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added fired alert count.

	* lib/PandoraFMS/DataServer.pm: Do not process more than one XML from
	  the same agent at the same time.

	* util/pandora_db.pl: Recalculate total module count.

2012-11-26  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed unintended executions and wrong event
	messages in planned downtime.

2012-11-15  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm